#    Priority medium:  520 .                                                 #       
#                                                                            #                                            
##############################################################################


---------------
--April 07, 2013
---------------
[62] --> big patch full of old and new techniques
[61] --> many fixes world
[60] --> fix break in stats
[59] --> fix merge
[58] --> merge from home
[57] --> 434 up, merge from home some new tactics
[56] --> 434 up, merge from home
[55] --> project korrektions
[54] --> 434 korrektions
[53] --> 434 up
[52] --> fix bad merge korrektions
[52] --> korrektions
[51] --> korrektions
[50] --> Rewrite project

---------------
--Mar 13, 2013
---------------
[49] --> very big flower in sql 
[48] --> some update 
[47] --> fixed compilation 
[46] --> bad merge
[45] --> some new 
[44] --> korrektions for linux
[43] --> fix linux compilation 
[42] --> korrektions
[41] --> http for visit the up
[40] --> Server up 
[39] --> sql from tc
[38] --> newest update from tc 

---------------
--Mar 08, 2013
---------------
[37] --> beta cata core 

---------------
--Mar 07, 2013
---------------
[36] --> hybrid
[35] --> tools
[34] --> tele
[33] --> Some patches
[32] --> Some tools 
[31] --> some ends 

---------------
--Mar 02, 2013
---------------
[30] --> korrektions
[29] --> inserted 
[28] --> korrektions
[27] --> experimental inline fiber to resources
[26] --> fix git , mangos compilation
[25] --> fix 
[24] --> incoming tc compilation 
[23] --> korrektions
[22] --> some korrektions 
[21] --> Rewriting the project 
[20] --> fix beta compilator
[19] --> compile tools

---------------
--Mar 02, 2013
---------------
[18] --> genrev
[17] --> tools
[16] --> cell enable 
[15] --> sql up
[14] --> sql up
[13] --> sql + ttl
[12] --> ttl
[11] --> loader
[10] --> all tools come
[9]  --> next
[8]  --> bug
[7]  --> korektion
[6]  --> korektion
[5]  --> korektion