@@ -17,6 +17,7 @@
 ---------------
 --April 07, 2013
 ---------------
+[63] --> little forward in spells
 [62] --> big patch full of old and new techniques
 [61] --> many fixes world
 [60] --> fix break in stats
